# nba-finals-odds-engine

./: .env.example  .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml
nba_playoff_odds/: __init__.py  api.py  bracket.py  config.py  elo.py  models.py  pipeline.py  simulation.py  storage.py
scripts/: backfill_season.py  run_daily.py
tests/: test_bracket.py  test_elo.py
